@@ -38,6 +38,8 @@ Version 1.11.16+dev:
    * Fix bug #22306: move_unit moves a unit even when it shouldn't
    * Fixed Gameplay -> Time of Day help topic displaying the Dawn ToD picture
      where the Second Watch picture should be used instead.
+   * Fixed mishandling of nested subnamespaces by the [clear_global_variable]
+     WML action causing an assertion failure (bug #21093).
 
 Version 1.11.16:
  * Add-ons client:
